Correction mobile - suppression de la numérotation

--- a/src/styles/components/carrousel.scss
+++ b/src/styles/components/carrousel.scss
@@ -89,3 +89,12 @@
     }
 
 }
+
+@media screen and (max-width: 425px) {
+    .carrousel {
+        &__indicator {
+            display: none;
+        }
+    }
+
+}
